--- a/bio.html
+++ b/bio.html
@@ -11,10 +11,9 @@
 
 <p>Samantha is a sophomore at Tufts University. She is currently undecided,
 but as an avid reader and writer, she is leaning towards an English and
-computer science double major. Although, the computer science part will
-probably be determined at the end of the semester. In addition to reading,
-Samantha also enjoys dancing. She was on the Tufts Ballroom team last year
-and recently joined TURBO, an urban breakdance group at Tufts.</p>
+computer science double major. In addition to reading, Samantha also enjoys
+dancing. She was on the Tufts Ballroom team last year and recently joined 
+TURBO, an urban breakdance group at Tufts.</p>
 
 </body>
 </html>
